# Consciousness-Sea

./: .gitignore  Dockerfile  README.md  api.py  api_fail_detail.txt  cli.py  docker-compose.yml  import_all.py  import_knowledge_base.py  import_related.py  merge_final.sh  merge_v2.sh  pyproject.toml  refactor_test2.txt  repair_data.py  补齐路线.md  识海——作为技术框架.md
.archive/: merge_all.py
.github/workflows/: ci.yml
backend/: cli.py
backend/config/: .env.example
backend/scripts/: generate_cert.py  import_knowledge_base.py  import_related.py  restore.py
backend/src/api/: app.py
backend/src/cli/: main.py
backend/src/consciousness_sea/: __init__.py
backend/src/consciousness_sea/domain/: __init__.py  answerer.py  graph_db.py  (+5 more)
backend/src/scripts/: import_knowledge_base.py  import_related.py
core/: __init__.py  alias_expander.py  answerer.py  audio_anchor.py  checkpoint.py  cognitive_goal.py  cold_start.py  config.py  connection_pool.py  context_injector.py  cross_validator.py  curiosity_engine.py  distillation_pool.py  domain_inference.py  expert_manager.py  expert_reliability.py  graph_db.py  guardian_loop.py  hebbian_binder.py  karma_cleaner.py  meta_seed.py  multimodal_aligner.py  observer.py  param_evaluator.py  param_stats.py  perception.py  query_history.py  router.py  seed_candidate.py  session_manager.py  somatic_anchor.py  tokenizer.py  user_manager.py  verifier.py  visual_anchor.py
data/: consciousness_sea.db-shm  consciousness_sea.db-wal  import_summary.json  stopwords.txt
docs/: roadmap.md  supplement-roadmap.md  架构.md
frontend/: package.json  tsconfig.json
frontend/src/: App.vue
monitoring/: alert_rules.yml  grafana-dashboard.json  prometheus.yml
scripts/: import_dragonball.py  test_e2e.py
tests/: conftest.py  locustfile.py  test_answer_with_expert.py  test_api.py  test_api_expert.py  test_audio_anchor.py  test_cognitive_goal.py  test_connection_pool.py  test_context_injector.py  test_cross_validator.py  test_curiosity_engine.py  test_domain_inference.py  test_error_paths.py  test_expert_e2e.py  test_expert_manager.py  test_expert_reliability.py  test_graph_db.py  test_guardian_loop.py  test_hebbian_binder.py  test_integration.py  test_meta_karma.py  test_meta_seed.py  test_observer.py  test_perception.py  test_phase2_distillation.py  test_phase2_dual_karma.py  test_phase2_integration.py  test_phase2_karma_boundary.py  test_phase2_param_evaluator.py  test_phase2_top_n.py  test_phase3_alias_expander.py  test_phase3_checkpoint.py  test_phase3_cold_start.py  test_phase3_e2e.py  test_phase3_seed_candidate.py  test_phase4_api.py  test_phase4_e2e.py  test_phase5_api.py  test_phase5_e2e.py  test_phase6_api.py  (+12 more)
(+38 files in other folders)
