[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consciousness-sea"
version = "0.1.0"
description = "识海 — 去中心化多智能体认知架构"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
ollama = [
    "httpx>=0.24",
]
perception = [
    "psutil>=5.9.0",
]
pytorch = [
    "torch>=2.0.0",
]
all = [
    "consciousness-sea[dev,ollama,perception,pytorch]",
]

[project.scripts]
consciousness-sea = "consciousness_sea.interfaces.api:main"
consciousness-sea-api = "consciousness_sea.interfaces.api:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["consciousness_sea*"]
